--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,10 @@ main = "src/index.js"
 compatibility_flags = ["nodejs_compat"]
 compatibility_date = "2024-09-23"
 
+routes = [
+  { pattern = "twikoo.tsxc.xyz", custom_domain = true }
+]
+
 [[d1_databases]]
 binding = "DB" # available in your Worker on env.DB
 database_name = "twikoo"
